--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@
                          and experimental approaches); ii) the interfaces between morphosyntax, semantics and pragmatics; iii) the relations between language, culture 
                          and cognition; and iv) community-led language revitalisation and maintenance practices.</p>
 
-                    <p>My approach to research and teaching is collaborative and community-guided. As a non-Indigenous man who has had the opportunity to live and work on unceded 
-                         Whadjuk Noongar, Amangu, Nhanhagardi, Wilunyu, Naaguja, Badimaya, Wajarri, Nhanda, Ngunnawal, Warnumamalya, Kungarakan and Larrakia country, I have had the 
-                         privilege of learning from many generous, patient and knowledgeable mentors and teachers, who have been instrumental in shaping and enhancing the collaborative 
-                         approaches and principles that underpin my teaching, research and community engagement.</p>
+                    <p>My approach to research and teaching is collaborative and community-guided. As a non-Indigenous man who has had the opportunity to live and 
+                   work on unceded Whadjuk Noongar, Nhanhagardi, Wilunyu, Naaguja, Badimia/Badimaya, Wajarri, Nhanda, Ngunnawal, Warnumamalya, Kungarakan and Larrakia 
+                   country, I have had the privilege of learning from many generous, patient and knowledgeable mentors and teachers, who have been instrumental in 
+                   shaping and enhancing the collaborative approaches and principles that underpin my teaching, research and community engagement.</p>
 
-                    <p>My research builds on over a decade of collaborative work with language communities in Mid-West Western Australia and north-east Arnhem Land. These partnerships 
-                         are central to conducting research that is valuable to the academy and the community alike. The languages I have worked most extensively with are Badimaya 
-                         (Pama-Nyungan, Kartu) in Mid-West WA and Anindilyakwa (Gunwinyguan) on the Groote Eylandt archipelago, NT.</p>
+                    <p>My research builds on over a decade of collaborative work with language communities in Mid-West Western Australia and east Arnhem Land. 
+                   These partnerships are central to conducting research that is valuable to the academy and the community alike. The languages I have worked 
+                   most extensively with are Badimia/Badimaya in Mid-West WA and Anindilyakwa/Amamalya Ayakwa on the Groote Eylandt archipelago, NT.</p>
                                         
                     <p>See <a href="#publications">publications</a> and <a href="#presentations">presentations</a> for links to my research.</p>          
                     
@@ -229,12 +229,12 @@
 
                <div class="row">
                     <div class="container-fluid">
-                    <p>I work and do research with a number of communities in Mid-West Western Australia and north-east Arnhem Land 
-                         (Northern Territory). In the Mid-West, I have worked with the Malgana, Ngarlawangga, Nhanda, Wajarri, Warriyangka, 
-                         Yingkarta and Yinhawangka languages and communities, however I have worked most extensively with the Badimaya community, 
-                         in and around Mt Magnet. In north-east Arnhem Land, the majority of my work has been based on the Groote Eylandt archipelago, 
-                         working with Warnumamalya communities on their language Anindilyakwa.
-                    </p>
+                        <p>I work and do research with a number of communities in Mid-West Western Australia and east Arnhem Land (Northern Territory). 
+                        In the Mid-West, I have worked with the Malgana, Ngarlawangga, Nhanda, Wajarri, Warriyangka, Yinggarda and Yinhawangka languages and 
+                        communities, however I have worked most extensively with the Badimia/Badimaya community, in and around Mt Magnet. In east Arnhem Land, 
+                        *the majority of my work has been based on the Groote Eylandt archipelago, working with Warnumamalya communities on their language 
+                        Anindilyakwa (Amamalya Ayakwa).
+                        </p>
                     </div>
                </div>
           </div>
@@ -249,7 +249,7 @@
                               </div>
 
                              <div class="pricing-bottom">
-                              <a href="/anindilyakwa.html" class="section-btn pricing-btn">Anindilyakwa</a>
+                                 <a href="/anindilyakwa.html" class="section-btn pricing-btn">Anindilyakwa (Amamalya Ayakwa)</a>
                              </div>
 
                          </div>
