--- a/anindilyakwa.html
+++ b/anindilyakwa.html
@@ -184,9 +184,15 @@
                               <li>Caudal, Patrick and James Bednall. 2023. <a href="https://www.mdpi.com/2226-471X/8/1/8" target="_blank">Aspectuo-temporal underspecification in Anindilyakwa: Descriptive,
                                    theoretical, typological and quantitative issues</a>. <i>Languages</i> 8(1), 8. <a href="https://www.mdpi.com/2226-471X/8/1/8/pdf?version=1672108983" target="_blank">Download PDF.</a></li>
                          
-                              <li>Mansfield, John, Rosey Billington and Hywel Stoakes. forthcoming. '<a href="https://psyarxiv.com/fpcrj" target="_blank">
-                                   Vowel predictability and omission in Anindilyakwa</a>' in Lori Repetti et al (eds.) <i>Epenthesis and beyond: Recent 
-                                        approaches to insertion in phonology and its interfaces</i>. Language Sciences Press.
+                              <li>
+                                  Mansfield, John, Rosey Billington and Hywel Stoakes. 2024. <a href="https://doi.org/10.5281/zenodo.14264532" target="_blank">
+                                      'Vowel predictability and omission in Anindilyakwa'</a> in Ji Yea Kim, Veronica Miatto, Andrija Petrovic & Lori Repetti (eds.) 
+                                  <i>Epenthesis and beyond: Recent approaches to insertion in phonology and its interfaces</i> (pp. 57-84). Berlin: 
+                                  Language Sciences Press.
+                              </li>
+
+                              <li>Bednall, James. 2024. <a href="https://doi.org/10.1515/9783111053226-021" target="_blank">‘Onomatopoeia in Anindilyakwa’</a> in L. 
+                             Körtvélyessy & P. Štekauer (eds.) <i>Onomatopoeia in the World’s Languages</i> (pp. 251-263). Berlin, Boston: De Gruyter Mouton.
                               </li>
                               </ul>
                          <br>
