--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
                     University & Université de Paris, with a thesis examining temporal, aspectual and modal expression in Anindilyakwa, the
                     language of the Groote Eylandt archipelago. During and following my PhD, I worked in various positions (consultant, linguist
                     and language centre coordinator) for the Anindilyakwa Land Council’s <a href="https://www.anindilyakwa.org.au/" target="_blank">
-                    Groote Language Centre</a>.
+                    Groote Island Language Centre</a>.
                    </p>
 
                    <p>
                     I was a lecturer in languages and linguistics at <a href="https://www.batchelor.edu.au/students/courses/higher-education-courses/he-languages-and-linguistics/" target="_blank">
-                    Batchelor Institute of Indigenous Tertiary Education</a> (BIITE), and since 2023 have held the position of lecturer in linguistics at
-                    <a href="https://researchers.cdu.edu.au/en/persons/james-bednall" target="_blank"> Darwin University</a>.
+                    Batchelor Institute of Indigenous Tertiary Education</a> (BIITE), and since 2023 have held my current position of lecturer in linguistics at
+                    <a href="https://researchers.cdu.edu.au/en/persons/james-bednall" target="_blank"> Charles Darwin University</a>.
                    </p>
 
                </div>
@@ -232,7 +232,7 @@
                         <p>I work and do research with a number of communities in Mid-West Western Australia and east Arnhem Land (Northern Territory). 
                         In the Mid-West, I have worked with the Malgana, Ngarlawangga, Nhanda, Wajarri, Warriyangka, Yinggarda and Yinhawangka languages and 
                         communities, however I have worked most extensively with the Badimia/Badimaya community, in and around Mt Magnet. In east Arnhem Land, 
-                        *the majority of my work has been based on the Groote Eylandt archipelago, working with Warnumamalya communities on their language 
+                        the majority of my work has been based on the Groote Eylandt archipelago, working with Warnumamalya communities on their language 
                         Anindilyakwa (Amamalya Ayakwa).
                         </p>
                     </div>
@@ -619,6 +619,8 @@
                            </i>. Mouton de Gruyter.
                        </p>
 
+                       <br>
+
                        <p><strong>Bednall, James</strong>. in prep. <i>A grammar of (northern) Badimia/Badimaya.</i></p>
 
                        <br>
@@ -665,9 +667,9 @@
 
                        <p>
                            <strong>Bednall, James</strong>. 2024. ‘Onomatopoeia in Anindilyakwa’ in L. Körtvélyessy & P. Štekauer (eds.)
-                           <i><a href="https://doi.org/10.1515/9783111053226-021#" target="_blank">Onomatopoeia in the World’s Languages</a></i> (pp. 251-263). 
+                           <i><a href="https://doi.org/10.1515/9783111053226-021#" target="_blank">Onomatopoeia in the World’s Languages</a></i> (pp. 251-263).
                            Berlin, Boston: De Gruyter Mouton.
-</p>
+                       </p>
 
                        <br>
 
@@ -1144,9 +1146,9 @@
 
                <p><a href="https://stapps.cdu.edu.au/apex/f?p=100:21:::::P21_SEARCH_UNIT,P21_SEARCH_VERSION,P21_SEARCH_YEAR:TES204,1,2024">TES204</a> Understanding Language Acquisition (INT6/2024)</p>
 
-               <p><a href="https://stapps.cdu.edu.au/apex/f?p=100:21:::::P21_SEARCH_UNIT,P21_SEARCH_VERSION,P21_SEARCH_YEAR:IAS301,1,2025">IAS301</a> / <a href="https://stapps.cdu.edu.au/apex/f?p=100:21:::::P21_SEARCH_UNIT,P21_SEARCH_VERSION,P21_SEARCH_YEAR:IAS570,1,2025">IAS570</a> Diversity in First Nations languages** (S2/2025)</p>
+               <p><a href="https://stapps.cdu.edu.au/apex/f?p=100:21:::::P21_SEARCH_UNIT,P21_SEARCH_VERSION,P21_SEARCH_YEAR:IAS301,1,2025">IAS301</a> / <a href="https://stapps.cdu.edu.au/apex/f?p=100:21:::::P21_SEARCH_UNIT,P21_SEARCH_VERSION,P21_SEARCH_YEAR:IAS570,1,2025">IAS570</a> Diversity in First Nations languages (S2/2025)</p>
                  
-               <p><a href="https://stapps.cdu.edu.au/apex/f?p=100:21:::::P21_SEARCH_UNIT,P21_SEARCH_VERSION,P21_SEARCH_YEAR:IAS363,5,2025" target="_blank">IAS363</a> Language Planning for Revitalisation and Maintenance* (S1/2023, S1/2024, INT4/2024, INT6/2025)</p>
+               <p><a href="https://stapps.cdu.edu.au/apex/f?p=100:21:::::P21_SEARCH_UNIT,P21_SEARCH_VERSION,P21_SEARCH_YEAR:IAS363,5,2025" target="_blank">IAS363</a> Language Planning for Revitalisation and Maintenance (S1/2023, S1/2024, INT4/2024, INT6/2025)</p>
 
                <p><a href="https://stapps.cdu.edu.au/apex/f?p=100:21:::::P21_SEARCH_UNIT,P21_SEARCH_VERSION,P21_SEARCH_YEAR:IAS364,3,2024" target="_blank">IAS364</a> Dictionary Making (S2/2021, INT6/2024)</p>
                     
