--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     University & Université de Paris, with a thesis examining temporal, aspectual and modal expression in Anindilyakwa, the
                     language of the Groote Eylandt archipelago. During and following my PhD, I worked in various positions (consultant, linguist
                     and language centre coordinator) for the Anindilyakwa Land Council’s <a href="https://www.anindilyakwa.org.au/" target="_blank">
-                    Groote Island Language Centre</a>.
+                    Groote Eylandt Language Centre</a>.
                    </p>
 
                    <p>
